# orcs_and_humans

./: .gitignore  1.1  1.2  1.3  1.4  1.5  CMakeLists.txt  make_msvc.cmd  making_a_field_for_the_game
cmake/: CompilerFlags.cmake  ForceAddFlags.cmake  PreventInSourceBuild.cmake  TargetArch.cmake  UtilMacro.cmake
src/: Main.cpp
